--- a/iconcss.css
+++ b/iconcss.css
@@ -221,7 +221,7 @@ padding-left: 1em;}
 .button {
     position: relative;
     width: 25%;
-    background-color: #D1CAD8;
+    background-color: #576660;
     border: none;
     padding-top: 1em;
     padding: px 5px;
@@ -242,5 +242,5 @@ padding-left: 1em;}
 }
 
 .download {
-    padding-top: 5em;
+    padding-top: 1em;
 }
