--- a/styleguide.css
+++ b/styleguide.css
@@ -6,3 +6,148 @@ line-height: 1cm;
 }
 
 
+body {
+    background-color: #DFDEDF;
+    font-family: "Raleway";
+    
+}
+
+h1 {
+    background-color: #DFDEDF;
+    position: relative;
+    text-align: left;
+    font-family: "Raleway";
+    font-weight: 600;
+    color: #576660;
+    text-align: center;
+    font-size: 2.5em;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    padding-top: 2em;
+}
+
+h2 {
+    background-color: #DFDEDF;
+    position: relative;
+    text-align: left;
+    font-family: "Raleway";
+    font-weight: 200;
+    color: #576660;
+    text-align: center;
+    font-size: 1.5em;
+    letter-spacing: 0.2em;
+    padding-top: .5em;
+}
+
+h3 {
+    background-color: #DFDEDF;
+    position: relative;
+    text-align: left;
+    font-family: "Raleway";
+    font-weight: 600;
+    color: #576660;
+    text-align: center;
+    font-size: 1em;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    padding-top: 1em;
+}
+
+hr {
+    width: 80%;
+    opacity: 0.9;
+    margin-top: 2em;
+}
+
+.short {
+    width: 10%;
+    margin-top: 0.2em;
+}
+
+.one {
+width: 8%;
+padding-top: 4em;
+padding-bottom: 3.5em;
+animation-duration: 2s;
+animation-delay: 0.2s;}
+
+
+.two {
+width: 8%;
+padding-top: 4em;
+padding-bottom: 3.5em;
+animation-duration: 2s;
+animation-delay: 0.4s;
+padding-left: 1em;
+}
+
+
+.three {
+width: 8%;
+padding-top: 4em;
+padding-bottom: 3.5em;
+animation-duration: 2s;
+animation-delay: 0.6s;
+padding-left: 1em;
+}
+
+
+.four {
+width: 8%;
+padding-top: 4em;
+padding-bottom: 3.5em;
+animation-duration: 2s;
+animation-delay: 0.8s;
+padding-left: 1em;
+}
+
+.five {
+width: 8%;
+padding-top: 4em;
+padding-bottom: 3.5em;
+animation-duration: 2s;
+animation-delay: 0.8s;
+padding-left: 1em;
+}
+
+.five {
+width: 8%;
+padding-top: 4em;
+padding-bottom: 3.5em;
+animation-duration: 2s;
+animation-delay: 0.8s;
+padding-left: 1em;
+}
+
+.six {
+width: 40%;
+padding-top: 4em;
+padding-bottom: 3.5em;
+animation-duration: 2s;
+animation-delay: 0.9s;
+padding-left: 1em;
+}
+
+.inspiration {
+    padding-top: 2em;
+}
+
+.monvoir {
+    padding-top: 2em; 
+}
+
+.baskerville {
+    padding-top: 2em;
+    
+}
+
+.botanist {
+    padding-top: 2em;
+    width: 15%;
+}
+
+.logo {
+    padding-top: 2em;
+    width: 40%;
+    padding-bottom: 6em;
+}
