--- a/styleguide.css
+++ b/styleguide.css
@@ -7,7 +7,7 @@ line-height: 1cm;
 
 
 body {
-    background-color: #DFDEDF;
+    background-color:#EAEDED ;
     font-family: "Raleway";
     
 }
@@ -21,7 +21,6 @@ a,a:link {
 }
 
 a:hover {
-    background-color: #DFDEDF;
     text-decoration: none;
     color: #408F62;
     position: relative;
@@ -32,7 +31,7 @@ a:hover {
 }
 
 h1 {
-    background-color: #DFDEDF;
+    
     position: relative;
     text-align: left;
     font-family: "Raleway";
@@ -46,7 +45,6 @@ h1 {
 }
 
 h2 {
-    background-color: #DFDEDF;
     position: relative;
     text-align: left;
     font-family: "Raleway";
@@ -59,7 +57,6 @@ h2 {
 }
 
 h3 {
-    background-color: #DFDEDF;
     position: relative;
     text-align: left;
     font-family: "Raleway";
@@ -73,7 +70,6 @@ h3 {
 }
 
 h4 {
-    background-color: #DFDEDF;
     position: relative;
     text-align: left;
     font-family: "Raleway";
@@ -90,6 +86,10 @@ hr {
     width: 80%;
     opacity: 0.9;
     margin-top: 2em;
+    align-content: center;
+}
+
+.sketches {width: 100%;
 }
 
 .short {
